# git-metainfo-python

./: .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/git_metainfo/: __init__.py  cli.py  core.py
tests/: test_core.py
